# percival_image_creator_mcp

./: .gitignore  README.md  image_models.json  main.py  pyproject.toml  server.py
tests/: test_cache_security.py  test_client_security.py  test_image_description_tools.py  test_image_generation_tools.py  test_model_catalog.py  test_prompt_injection_regression.py  test_runtime_config.py  test_security_hardening.py  test_venice_image_payload.py
tests/fixtures/: prompt_injection_corpus.json
tools/: image_description_tools.py  image_generation_tools.py
utils/: __init__.py  cache_utils.py  client.py  config.py  model_catalog.py  nanobot_profile.py  path_utils.py  security_utils.py  venice_image_payload.py
