[project]
name = "percival-image-creator-mcp"
version = "0.2.0"
description = "Agnostic Model Context Protocol (MCP) server for Image Generation and Analysis, optimized for Venice.ai and nanobot."
readme = "README.md"
requires-python = ">=3.10"

# Uses the 'openai' package as a generic client for Venice.ai
dependencies = [
    "mcp[cli]>=1.0.0",
    "openai>=2.29.0,<3",
    "pillow>=10.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0"
]

[project.scripts]
jarvina-mcp = "main:main"
percival-image-creator-mcp = "main:main"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
